--- a/Desafios/d001/index.html
+++ b/Desafios/d001/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Desafio das Mensagens</title>
 </head>
-<body><h1>Desafio das Mensagens</h1>
+<body>
+    <h1>Desafio das Mensagens</h1>
     <p>*Um</p>
     <p>**Dois</p>
     <p>***Três</p>
