--- a/Desafios/d005/index.html
+++ b/Desafios/d005/index.html
@@ -1,26 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Desafio social</title>
 </head>
+
 <body>
-    <h1>Minhas redes sociais</h1>
-    <h2>Quem sou eu?</h2>
-    <p><img src="foto-perfil-guanabara.png" alt="foto"></p>
-    <p>Meu nome é <strong>Gustavo Guanabara</strong>, sou professor de Tecnologia desde 1994 e hoje produzo conteúdos para quem está iniciando no ramo da programação e desenvolvimento de site/aplicações. São muitos anos dentro de sala de aula, tentando mostar de forma simples e objetiva alguns conceitos que muita gente iniciante acha muito difícil.</p>
-    <h2>Como falar comigo?</h2>
-    <ul>
-        <li><img src="icone-youtube.png" alt="icone-youtube"><a href="https://youtube.com/cursoemvideo/" target="_blank" rel="external"><strong>YouTube</strong></a> - Se inscreve lá no meu canal no YouTube</li>
-        <li><img src="icone-github.png" alt="icone-github"><a href="https://gustavoguanabara.github.io" target="_blank" rel="external"><strong>GitHub</strong></a> - Acessa meu repositório público no GitHub</li>
-        <li><img src="icone-instagram.png" alt="icone-instagram"><a href="https://www.instagram.com/gustavoguanabara/" target="_blank" rel="external"><strong>Instagram</strong></a> - Me segue lá no Instagram</li>
-        <li><img src="icone-linkedin.png" alt="icone-linkedin"><a href="https://br.linkedin.com/in/guanabara/" target="_blank" rel="external"><strong>Linkedin</strong></a> - Me adiciona lá no Linkedin</li>
-        <li><img src="icone-twitter.png" alt="icone-twitter"><a href="https://twitter.com/guanabara" target="_blank" rel="external"><strong>Twitter</strong></a> - Me segue no Twitter</li>
-        <li><img src="icone-facebook.png" alt="icone-facebook"><a href="https://www.facebook.com/gustavoguanabara/" target="_blank" rel="external"><strong>Facebook</strong></a> - Me acompanha lá no Facebook</li>
-    </ul>
-    
-    
+    <header>
+        <h1>Minhas redes sociais</h1>
+    </header>
+
+    <main>
+        <article>
+            <h2>Quem sou eu?</h2>
+            <p><img src="foto-perfil-guanabara.png" alt="foto"></p>
+            <p>Meu nome é <strong>Michael da Silva Barbosa</strong>, sou aluno do Curso em video.</p>
+        </article>
+        <aside>
+            <h2>Como falar comigo?</h2>
+            <ul>
+                <li><img src="icone-youtube.png" alt="icone-youtube"><a href="https://www.youtube.com/@michaelbarbosa9582"
+                        target="_blank" rel="external"><strong>YouTube</strong></a>
+                </li>
+                <li><img src="icone-github.png" alt="icone-github"><a href="https://github.com/michaelbarbosa"
+                        target="_blank" rel="external"><strong>GitHub</strong></a></li>
+                <li><img src="icone-instagram.png" alt="icone-instagram"><a
+                        href="https://www.instagram.com/michael_barbosa07/" target="_blank"
+                        rel="external"><strong>Instagram</strong></a></li>
+                <li><img src="icone-linkedin.png" alt="icone-linkedin"><a
+                        href="https://www.linkedin.com/in/michael-da-silva-barbosa-063418202/" target="_blank"
+                        rel="external"><strong>Linkedin</strong></a></li>
+                <li><img src="icone-twitter.png" alt="icone-twitter"><a href="https://twitter.com/michael12027106"
+                        target="_blank" rel="external"><strong>Twitter</strong></a></li>
+                <li><img src="icone-facebook.png" alt="icone-facebook"><a href="@" target="_blank"
+                        rel="external"><strong>Facebook</strong></a></li>
+                </ul>
+        </aside>
+    </main>
+
 </body>
+
 </html>
