--- a/Desafios/d012/desafio-cordel.html
+++ b/Desafios/d012/desafio-cordel.html
@@ -10,12 +10,14 @@
 
 <body>
     <header>
+
         <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" >Milton Duarte </a>
-        </p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" >Milton Duarte </a></p>
+
     </header>
 
     <section class="normal">
+
         <p>
             Estou ficando cansado<br>
             Da tal tecnologia<br>
@@ -25,8 +27,11 @@
             Antes que eu caduque<br>
             Vou dizer tudo em poesia.<br>
         </p>
+
     </section>
+
     <section class="imagem" id="img01">
+
         <p>
             Não é mais como era antes<br>
             É tudo abreviado<br>
@@ -36,8 +41,11 @@
             Basta botar uma flor<br>
             E um coração desenhado.<br>
         </p>
+
     </section>
+
     <section class="normal">
+
         <p>
             Arroba agora não pesa<br>
             É parte de um endereço<br>
@@ -57,8 +65,11 @@
             Pra entender como fica<br>
             Decifre esse rabisco.<br>
         </p>
+
     </section>
+
     <section class="imagem" id="img02">
+
         <p>
             Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
@@ -68,7 +79,9 @@
             Era texto de verdade<br>
             Nas linhas do coração.<br>
         </p>
+
     </section>
+
     <section class="normal">
         <p>
             Agora, escrevo e envio<br>
@@ -89,10 +102,13 @@
             Seus lábios são aparelhos<br>
             Deixe que Deus interprete.<br>
         </p>
+
     </section>
+
     <footer>
-        <p>Site criado por <a href="https://github.com/michaelbarbosa">Michael da silva barbosa</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">curso em video</a></p>
+        <p>Site criado por <a href="https://github.com/michaelbarbosa">Michael da Silva Barbosa</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
     </footer>
+    
 </body>
 
 </html>
