--- a/Desafios/d001/index.html
+++ b/Desafios/d001/index.html
@@ -7,16 +7,19 @@
     <title>Desafio das Mensagens</title>
 </head>
 <body>
-    <h1>Desafio das Mensagens</h1>
-    <p>*Um</p>
-    <p>**Dois</p>
-    <p>***Três</p>
-    <p>****Quatro</p>
-    <br>
-    <p>****Quatro</p>
-    <p>***Três</p>
-    <p>**Dois</p>
-    <p>*Um</p>
-
+    <header>
+        <h1>Desafio das Mensagens</h1>
+    </header>
+    <section>
+        <p>*Um</p>
+        <p>**Dois</p>
+        <p>***Três</p>
+        <p>****Quatro</p>
+        <br>
+        <p>****Quatro</p>
+        <p>***Três</p>
+        <p>**Dois</p>
+        <p>*Um</p>
+    </section>
 </body>
 </html>
