--- a/Desafios/d008/index.html
+++ b/Desafios/d008/index.html
@@ -4,22 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>desafio-navegação</title>
-    <style>
-        body{
-            background-color: rgb(99, 99, 99);
-            font-family: Arial;
-            font-size: 24pt;
-        }
-        
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Desafio da Navegação</h1>
-    <p>Este é a página principal, o índice do seu site. É a página cinza. A partir dela você pode acessar as outras áreas principais através dos links a seguir:</p>
-    <ul>
-        <li><a href="página2.html" target="_self" rel="next">acessar área verde</a></li>
-        <li><a href="página3.html" target="_self" rel="next">acessar área roxa</a></li>
-    </ul>
+    <header>
+        <h1>Desafio da Navegação</h1>
+
+        <p>Este é a página principal, o índice do seu site. É a página <strong class="azul">Azul</strong>. A partir dela você pode acessar as outras áreas principais através dos links a seguir:</p>
+    </header>
+    <main>
+        <ul>
+            <li><a href="página2.html" target="_self" rel="next">Acessar área <strong class="verde">Verde</strong></a></li>
+            <li><a href="página3.html" target="_self" rel="next">Acessar área <strong class="roxo">Roxa</strong></a></li>
+        </ul>
+    </main>
     
 </body>
 </html>
