--- a/Desafios/d008/página3.html
+++ b/Desafios/d008/página3.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>desafio-navegação</title>
-    <style>
-        body{
-            background-color: rgb(151, 96, 156);
-            font-family: Arial;
-            font-size: 24pt;
-            color: rgb(65, 1, 65);
-        }
-        
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Página Amarela</h1>
-    <p>Você agora está na área anarela. Você acessou clicando no segundo link da página principal</p>
-    <ul>
-        <li><a href="index.html" target="_self" rel="prev">voltar para página cinza</a></li>
-    </ul>
+<body  class="pag3">
+    <header>
+        <h1>Página Roxa</h1>
+
+        <p>Você agora está na área <strong class="roxo">Roxa.</strong> Você acessou clicando no segundo link da página principal.</p>
+
+    </header>
+
+    <main>
+        <ul>
+            <li><a href="index.html" target="_self" rel="prev">Voltar para Página <strong class="azul">Azul</strong></a></li>
+        </ul>
+
+    </main>
 </body>
 </html>
