--- a/Desafios/d002/index.html
+++ b/Desafios/d002/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <title>Imagens</title>
 </head>
-<body><h1>Desafio das Imagens</h1>
-    <p>Inserir imagens em HTML é muito simples, tanto no conteúdo quanto lá em cima, como ícone de favoritos!</p>
-    <img src="github-m.png" alt="github">
+<body>
+    <header>
+        <h1>Desafio das Imagens</h1>
+        <p>Inserir imagens em HTML é muito simples, tanto no conteúdo quanto lá em cima, como ícone de favoritos!</p>
+    </header>
+    <section>
+        <img src="github-m.png" alt="github">
+    </section>
     
 </body>
 </html>
