--- a/Desafios/d004/index.html
+++ b/Desafios/d004/index.html
@@ -4,18 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Emojis</title>
-</head><h1>Meus emojis favoritos</h1>
-<h2>Carinhas</h2>
-&#9827; &#x1F605;<br>
-&#9827; &#x1F601;<br>
-&#9827; &#x1F62C;
-<h2>Esportes</h2>
-&#9827; &#x26BD;<br>
-&#9827; &#x1F3C0;<br>
-&#9827; &#x1F3C9;
-<h2>Aleatorios</h2>
+</head>
 <body>
-    
+    <header>
+        <h1>Meus emojis favoritos</h1>
+    </header>
+
+    <main>
+    <h2>Carinhas</h2>
+        <ul>
+            <li>&#x1F60E;</li>
+            <li>&#x1F602;</li>
+            <li>&#x1F605;</li>
+        </ul>
+    <h2>Esportes</h2>
+        <ul>
+            <li>&#x26BD;</li>
+            <li>&#x1F3C0;</li>
+            <li>&#x1F3C8;</li>
+        </ul>
+    <h2>Eventos</h2>
+        <ul>
+            <li>&#x1F47E;</li>
+            <li>&#x1F383;</li>
+            <li>&#x1F47D;</li>
+        </ul>
+</main>
 </body>
 </html>
