--- a/Desafios/d008/página2.html
+++ b/Desafios/d008/página2.html
@@ -4,21 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>desafio-navegação</title>
-    <style>
-        body{
-            background-color: rgb(72, 161, 76);
-            font-family: Arial;
-            font-size: 24pt;
-            color: rgb(16, 46, 27);
-        }
-        
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Página Verde</h1>
-    Você agora está na área verde. Você acessou clicando no primeiro link da página principal
-    <ul>
-        <li><a href="index.html" target="_self" rel="prev">voltar para página cinza</a></li>
-    </ul>
+<body class="pag2">
+    <header>
+        <h1>Página Verde</h1>
+        <p>Você agora está na área <strong class="verde">Verde</strong>. Você acessou clicando no primeiro link da página principal</p>
+    </header>
+    <main>
+        <ul>
+            <li><a href="index.html" target="_self" rel="prev">voltar para página <strong class="azul">Azul</strong></a></li>
+        </ul>
+    </main>
 </body>
 </html>
