--- a/Desafios/d009/index.html
+++ b/Desafios/d009/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>desafio-video</title>
-    <style>
-        body{
-            background-color: rgb(5, 62, 128);
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 16pt;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<pre>
-<h1>Vídeos legais para assistir</h1>
-<a href="pagina2.html" rel="next" target="_self"><img src="imagens/thumb-html.png" alt="curso de html"></a><a href="paginajs.html" rel="next" target="_self"><img src="imagens/thumb-js.png" alt="curso de javascript"></a>
-<a href="paginahardware.html" rel="next" target="_self"><img src="imagens/thumb-hardware.png" alt="hardware"></a><a href="paginapython.html" rel="next" target="_self"><img src="imagens/thumb-python.png" alt="python"></a>
-</pre>
+
+<header>
+
+    <h1>Vídeos legais para assistir</h1>
+</header>
+
+<main id="principal">
+
+    <a href="pagina2.html" rel="next" target="_self"><img src="imagens/thumb-html.png" alt="curso de html"></a>
+
+    <a href="paginajs.html" rel="next" target="_self"><img src="imagens/thumb-js.png" alt="curso de javascript"></a>
+
+    <a href="paginahardware.html" rel="next" target="_self"><img src="imagens/thumb-hardware.png" alt="hardware"></a>
+
+    <a href="paginapython.html" rel="next" target="_self"><img src="imagens/thumb-python.png" alt="python"></a>
+
+</main>
     
 </body>
 </html>
