--- a/Desafios/d009/paginajs.html
+++ b/Desafios/d009/paginajs.html
@@ -4,22 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>desafio-video</title>
-    <style>
-        body{
-            background-color: rgb(5, 62, 128);
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 16pt;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Curso de javascript</h1>
+    <header>
+        <h1>Curso de javascript</h1>
+    </header>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/BXqUH86F-kA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <ul>
-        <li><a href="https://www.youtube.com/watch?v=BXqUH86F-kA&list=PLntvgXM11X6pi7mW0O4ZmfUI1xDSIbmTm" rel="external" target="_blank"><p>Veja o curso completo aqui</p</a></li>
-        <li><a href="index.html" rel="prev" target="_self"><img src="imagens/voltar.png" alt="voltar" ></a></li>
-    </ul>
+    <main class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/BXqUH86F-kA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        
+            <p><a href="https://www.youtube.com/watch?v=BXqUH86F-kA&list=PLntvgXM11X6pi7mW0O4ZmfUI1xDSIbmTm" rel="external" target="_blank">Veja o curso completo aqui</a></p>
+            <p><a href="index.html" rel="prev" target="_self"><img src="imagens/voltar.png" alt="voltar" ></a></p>
+        
+    </main>
 </body>
 </html>
