--- a/Desafios/d005/index.html
+++ b/Desafios/d005/index.html
@@ -2,45 +2,43 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <title>Desafio social</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="style.css">
+        <title>Desafio social</title>
 </head>
 
 <body>
-    <header>
-        <h1>Minhas redes sociais</h1>
-    </header>
+        <header>
+                <h1>Minhas redes sociais</h1>
+        </header>
 
-    <main>
-        <article>
-            <h2>Quem sou eu?</h2>
-            <p><img src="foto-perfil-guanabara.png" alt="foto"></p>
-            <p>Meu nome é Michael da Silva Barbosa, sou aluno do Curso em video.</p>
-        </article>
-        <aside>
-            <h2>Como falar comigo?</h2>
-            <ul>
-                <li><img src="icone-youtube.png" alt="icone-youtube"><a href="https://www.youtube.com/@michaelbarbosa9582"
-                        target="_blank" rel="external">  YouTube</a>
-                </li>
-                <li><img src="icone-github.png" alt="icone-github"><a href="https://github.com/michaelbarbosa"
-                        target="_blank" rel="external">  GitHub</a></li>
-                <li><img src="icone-instagram.png" alt="icone-instagram"><a
-                        href="https://www.instagram.com/michael_barbosa07/" target="_blank"
-                        rel="external">  Instagram</a></li>
-                <li><img src="icone-linkedin.png" alt="icone-linkedin"><a
-                        href="https://www.linkedin.com/in/michael-da-silva-barbosa-063418202/" target="_blank"
-                        rel="external">  Linkedin</a></li>
-                <li><img src="icone-twitter.png" alt="icone-twitter"><a href="https://twitter.com/michael12027106"
-                        target="_blank" rel="external">  Twitter</a></li>
-                <li><img src="icone-facebook.png" alt="icone-facebook"><a href="@" target="_blank"
-                        rel="external">  Facebook</a></li>
-                </ul>
-        </aside>
-    </main>
+        <main>
+                <article>
+                        <h2>Quem sou eu?</h2>
+
+                        <p><img src="foto-perfil-guanabara.png" alt="foto"></p>
+
+                        <p>Meu nome é Michael da Silva Barbosa, sou aluno do Curso em video.</p>
+                </article>
+                <aside>
+                        <h2>Como falar comigo?</h2>
+                        <ul>
+                        <li><img src="icone-youtube.png" alt="icone-youtube"><a href="https://www.youtube.com/@michaelbarbosa9582" target="_blank" rel="external"> YouTube</a></li>
+
+                        <li><img src="icone-github.png" alt="icone-github"><a href="https://github.com/michaelbarbosa" target="_blank" rel="external">GitHub</a></li>
+
+                        <li><img src="icone-instagram.png" alt="icone-instagram"><a href="https://www.instagram.com/michael_barbosa07/" target="_blank" rel="external"> Instagram</a></li>
+
+                        <li><img src="icone-linkedin.png" alt="icone-linkedin"><a href="https://www.linkedin.com/in/michael-da-silva-barbosa-063418202/" target="_blank" rel="external">Linkedin</a></li>
+
+                        <li><img src="icone-twitter.png" alt="icone-twitter"><a href="https://twitter.com/michael12027106" target="_blank" rel="external"> Twitter</a></li>
+
+                         <li><img src="icone-facebook.png" alt="icone-facebook"><a href="@" target="_blank" rel="external"> Facebook</a></li>
+                        </ul>
+                </aside>
+        </main>
 
 </body>
 
