--- a/Desafios/d006/index.html
+++ b/Desafios/d006/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
@@ -7,22 +8,27 @@
     <title>Desafio-tags</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Tags em HTML</h1>
-        <p>Em HTML5, podemos inserir os elementos da lista a seguir. Passe o mouse sobre os termos para qual tag deverá utilizar em cada caso</p>
+        <p>Em HTML5, podemos inserir os elementos da lista a seguir. Passe o mouse sobre os termos para qual tag deverá
+            utilizar em cada caso</p>
     </header>
     <main>
         <ul type="square">
             <li><abbr title="use a tag &lt;p&gt;">Parágrafos</abbr></li>
-            <li><abbr title="use as tags &lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, &lt;h4&gt;, &lt;h5&gt; e &lt;h6&gt;">Títulos</abbr></li>
+            <li><abbr
+                    title="use as tags &lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, &lt;h4&gt;, &lt;h5&gt; e &lt;h6&gt;">Títulos</abbr>
+            </li>
             <li><abbr title="use a tag &lt;img&gt;">Imagens</abbr></li>
             <li><abbr title="use a tag &lt;abbr&gt;">Abreviações</abbr></li>
             <li><abbr title="use a tag &lt;code&gt;">Códigos-fonte</abbr></li>
             <li><abbr title="use a tag &lt;ol&gt;">Lista numerada</abbr></li>
             <li><abbr title="use a tag &lt;ul&gt;">Lista com demarcadores</abbr></li>
         </ul>
-        
+
     </main>
 </body>
+
 </html>
