--- a/Desafios/d008/página2.html
+++ b/Desafios/d008/página2.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>desafio-navegação</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="pag2">
     <header>
         <h1>Página Verde</h1>
-        <p>Você agora está na área <strong class="verde">Verde</strong>. Você acessou clicando no primeiro link da página principal</p>
+        <p>Você agora está na área <strong class="verde">Verde</strong>. Você acessou clicando no primeiro link da
+            página principal</p>
     </header>
     <main>
         <ul>
-            <li><a href="index.html" target="_self" rel="prev">voltar para página <strong class="azul">Azul</strong></a></li>
+            <li><a href="index.html" target="_self" rel="prev">voltar para página <strong class="azul">Azul</strong></a>
+            </li>
         </ul>
     </main>
 </body>
+
 </html>
