--- a/Desafios/d008/página3.html
+++ b/Desafios/d008/página3.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>desafio-navegação</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body  class="pag3">
+
+<body class="pag3">
     <header>
         <h1>Página Roxa</h1>
 
-        <p>Você agora está na área <strong class="roxo">Roxa.</strong> Você acessou clicando no segundo link da página principal.</p>
+        <p>Você agora está na área <strong class="roxo">Roxa.</strong> Você acessou clicando no segundo link da página
+            principal.</p>
 
     </header>
 
     <main>
         <ul>
-            <li><a href="index.html" target="_self" rel="prev">Voltar para Página <strong class="azul">Azul</strong></a></li>
+            <li><a href="index.html" target="_self" rel="prev">Voltar para Página <strong class="azul">Azul</strong></a>
+            </li>
         </ul>
 
     </main>
 </body>
+
 </html>
