--- a/Desafios/d009/index.html
+++ b/Desafios/d009/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>desafio-video</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header>
+    <header>
 
-    <h1>Vídeos legais para assistir</h1>
-</header>
+        <h1>Vídeos legais para assistir</h1>
 
-<main id="principal">
+    </header>
 
-    <a href="pagina2.html" rel="next" target="_self"><img src="imagens/thumb-html.png" alt="curso de html"></a>
+    <main id="principal">
 
-    <a href="paginajs.html" rel="next" target="_self"><img src="imagens/thumb-js.png" alt="curso de javascript"></a>
+        <a href="pagina2.html" rel="next" target="_self"><img src="imagens/thumb-html.png" alt="curso de html"></a>
 
-    <a href="paginahardware.html" rel="next" target="_self"><img src="imagens/thumb-hardware.png" alt="hardware"></a>
+        <a href="paginajs.html" rel="next" target="_self"><img src="imagens/thumb-js.png" alt="curso de javascript"></a>
 
-    <a href="paginapython.html" rel="next" target="_self"><img src="imagens/thumb-python.png" alt="python"></a>
+        <a href="paginahardware.html" rel="next" target="_self"><img src="imagens/thumb-hardware.png"
+                alt="hardware"></a>
 
-</main>
-    
+        <a href="paginapython.html" rel="next" target="_self"><img src="imagens/thumb-python.png" alt="python"></a>
+
+    </main>
+
 </body>
+
 </html>
