--- a/Desafios/d009/pagina2.html
+++ b/Desafios/d009/pagina2.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>desafio-video</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
+
         <h1>Curso de HTML5</h1>
+
     </header>
+
     <main class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/rsFCVjr5yxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        
-            <p><a href="https://www.youtube.com/watch?v=epDCjksKMok&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o" rel="external" target="_blank">Veja o curso completo aqui</a></p>
-            <p><a href="index.html" rel="prev" target="_self"><img src="imagens/voltar.png" alt="voltar" ></a></p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/rsFCVjr5yxc" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+
+        <p>
+            <a href="https://www.youtube.com/watch?v=epDCjksKMok&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o" rel="external"
+                target="_blank">Veja o curso completo aqui</a>
+        </p>
+
+        <p>
+            <a href="index.html" rel="prev" target="_self"><img src="imagens/voltar.png" alt="voltar"></a>
+        </p>
+
     </main>
-    
+
 </body>
+
 </html>
