--- a/Desafios/d003/index.html
+++ b/Desafios/d003/index.html
@@ -31,6 +31,8 @@
         <img src="mapa9.png" alt="9">
 
     </section>
+
+    <footer><p>Criado por Michael da Silva Barbosa</p></footer>
 </body>
 
 </html>
