--- a/Desafios/d004/index.html
+++ b/Desafios/d004/index.html
@@ -34,6 +34,8 @@
             <li>&#x1F47D;</li>
         </ul>
     </main>
+
+    <footer><p>Criado por Michael da Silva Barbosa</p></footer>
 </body>
 
 </html>
