--- a/Desafios/d006/index.html
+++ b/Desafios/d006/index.html
@@ -29,6 +29,8 @@
         </ul>
 
     </main>
+
+    <footer><p>Criado por Michael da Silva Barbosa para o CursoemVideo</p></footer>
 </body>
 
 </html>
