--- a/Desafios/d007/index.html
+++ b/Desafios/d007/index.html
@@ -21,7 +21,7 @@
             <img src="imagens/paisagem-g.png" alt="imagem flexível">
         </picture>
     </main>
-
+    <footer><p>Criado por Michael da Silva para o CursoemVideo</p></footer>
 </body>
 
 </html>
