--- a/Desafios/d008/página3.html
+++ b/Desafios/d008/página3.html
@@ -24,6 +24,7 @@
         </ul>
 
     </main>
+    <footer><p>Criado por Michael da Silva Barbosa para o CursoemVideo</p></footer>
 </body>
 
 </html>
