--- a/Desafios/d009/paginahardware.html
+++ b/Desafios/d009/paginahardware.html
@@ -19,9 +19,11 @@
             allowfullscreen></iframe>
 
         <p><a href="https://www.youtube.com/watch?v=iT6E92Kt38o&list=PLHz_AreHm4dn1JHgN9wpbIUhzZmycYQXW" rel="external"
-                target="_blank">Veja o curso completo aquip</a></p>
+                target="_blank">Veja o curso completo aqui</a></p>
         <p><a href="index.html" rel="prev" target="_self"><img src="imagens/voltar.png" alt="voltar"></a></p>
     </main>
+
+    <footer><p>Criado por Michael da Silva Barbosa para o CursoemVideo</p></footer>
 
 </body>
 
