--- a/Desafios/d009/paginajs.html
+++ b/Desafios/d009/paginajs.html
@@ -24,6 +24,8 @@
         <p><a href="index.html" rel="prev" target="_self"><img src="imagens/voltar.png" alt="voltar"></a></p>
 
     </main>
+
+    <footer><p>Criado por Michael da Silva Barbosa para o CursoemVideo</p></footer>
 </body>
 
 </html>
