--- a/Desafios/d002/index.html
+++ b/Desafios/d002/index.html
@@ -15,9 +15,10 @@
         <p>Inserir imagens em HTML é muito simples, tanto no conteúdo quanto lá em cima, como ícone de favoritos!</p>
     </header>
     <section>
-        <img src="github-m.png" alt="github">
+        <img src="github-m.png" alt="github"></
     </section>
 
+    <footer><p>Criado por Michael da Silva Barbosa</p></footer>
 </body>
 
 </html>
