--- a/Desafios/d008/index.html
+++ b/Desafios/d008/index.html
@@ -23,6 +23,7 @@
             </li>
         </ul>
     </main>
+    <footer><p>Criado por Michael da Silva Barbosa para o CursoemVideo</p></footer>
 
 </body>
 
