--- a/Desafios/d008/página2.html
+++ b/Desafios/d008/página2.html
@@ -20,6 +20,7 @@
             </li>
         </ul>
     </main>
+    <footer><p>Criado por Michael da Silva Barbosa para o CursoemVideo</p></footer>
 </body>
 
 </html>
