--- a/Exercicios/ex023/tabela002.html
+++ b/Exercicios/ex023/tabela002.html
@@ -12,6 +12,15 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            font-weight: bold;
+            position: relative;
+        }
+
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: darkslateblue;
+
         }
 
         td, th {
@@ -19,9 +28,20 @@
             padding: 10px;
         }
 
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
         thead, tfoot {
-            background-color: chocolate;
+            background-color: darkslateblue;
             color: white;
+        }
+
+        tbody > tr:nth-child(odd) {
+            background-color:lightgray ;
         }
 
         .num {
@@ -34,6 +54,7 @@
     <!--
         ANATOMIA PARA TABELAS GRANDES
         TABLE
+            CAPITION
             THEAD
                 TR, TD, TH
             TBODY
@@ -42,15 +63,16 @@
                 TR, TD, TH
     -->
     <Table>
+        <caption>População da Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>Sã Paulo</td>
+                <td>São Paulo</td>
                 <td class="num">45.919.049</td>
             </tr>
             <tr>
@@ -160,7 +182,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Hbitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>210.147.125</strong></td>
             </tr>
         </tfoot>
