--- a/Exercicios/ex024/iframe003.html
+++ b/Exercicios/ex024/iframe003.html
@@ -29,7 +29,8 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore corporis impedit odit magnam fugiat atque cupiditate id, voluptatibus similique, non ipsam aliquam, et sapiente rerum voluptas ducimus quasi unde magni? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id exercitationem perspiciatis tempora repellat repudiandae numquam, porro culpa quo unde. Magnam, alias? Nemo similique ex esse in quibusdam sapiente. Odio, praesentium.</p>
 
-    <iframe id="tela" name="frame" src="loading.html" >
+    <iframe id="tela" name="frame" srcdoc="
+     <h1> Escolhar umda das opções a cima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore corporis impedit odit magnam fugiat atque cupiditate id, voluptatibus similique, non ipsam aliquam, et sapiente rerum voluptas ducimus quasi unde magni? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id exercitationem perspiciatis tempora repellat repudiandae numquam, porro culpa quo unde. Magnam, alias? Nemo similique ex esse in quibusdam sapiente. Odio, praesentium.</p> img src='' >
         <p>Infelizmente seu navegador não é compatível com isso</p>
     </iframe>
 
